# devin-issues-automation

./: .gitignore  ANALYSIS_RESULTS.md  GITHUB_APP_AUTHENTICATION_WORKFLOW.md  NEON_MIGRATION.sql  PROJECT_STATUS.md  README.md  TESTING_RESULTS.md  WORKSPACE_SETUP.md  debug_database.py  debug_devin_sessions.py  setup-deployment.sh  test_api_integration.py
backend/: .env  .env.example  add_html_url_migration.py  add_missing_column.py  add_ref_id_number_migration.py  build_env.py  check_env.py  check_schema.py  check_test_data.py  create_more_test_sessions.py  drop_tables.py  pyproject.toml  quick_test.py  recreate_tables.py  test_api_integration.py  test_devin_sessions.py  test_github_api.py  test_github_integration.py  test_github_issue_storage.py  test_http_endpoints.py
backend/app/: database.py  devin_client.py  github_client.py  main.py  models.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.css  App.tsx
frontend/src/components/: CowbellIcon.tsx  CowbellPlayer.tsx
